# AzoicEngine

./: README.md  cryengine.cryengine  waf_branch_spec.py
Code/CryEngine/Cry3DEngine/: 3DEngineLight.cpp  3DEngineMemory.cpp  3DEngineMemory.h  3DEngineRender.cpp  3dEngine.cpp  3dEngine.h  3dEngineLoad.cpp  3dEngineLoad.h  Array2d.h  BasicArea.cpp  BasicArea.h  BreakableGlassRenderNode.cpp  BreakableGlassRenderNode.h  BreezeGenerator.cpp  BreezeGenerator.h  Brush.cpp  Brush.h  CCullRenderer.cpp  CCullRenderer.h  CCullThread.cpp  CCullThread.h  CMakeLists.txt  ClipVolume.cpp  ClipVolume.h  ClipVolumeManager.cpp  ClipVolumeManager.h  CloudBlockerRenderNode.cpp  CloudBlockerRenderNode.h  ColorGradingCtrl.cpp  ColorGradingCtrl.h  Cry3DEngine.cpp  Cry3DEngineBase.h  Decal.cpp  DecalManager.cpp  DecalManager.h  DecalRenderNode.cpp  DecalRenderNode.h  DeferredCollisionEvent.cpp  DeferredCollisionEvent.h  DeformableNode.h  (+152 more)
Code/CryEngine/CryAISystem/: AIActions.cpp  AIActions.h  AIActor.cpp  AIActor.h  AICollision.cpp  AICollision.h  AIConsoleVariables.cpp  AIConsoleVariables.h  AIDbgRecorder.cpp  AIDbgRecorder.h  AIDebugDrawHelpers.cpp  AIDebugDrawHelpers.h  AIEntityComponent.cpp  AIEntityComponent.h  AIFlyingVehicle.cpp  AIFlyingVehicle.h  AIGroup.cpp  AIGroup.h  AIGroupConsoleVariables.cpp  AIGroupConsoleVariables.h  AIHash.h  AILegacyConsoleVariables.cpp  AILegacyConsoleVariables.h  AILightManager.cpp  AILightManager.h  AILog.cpp  AILog.h  AIMemStats.cpp  AIObject.cpp  AIObject.h  AIObjectIterators.h  AIObjectManager.cpp  AIObjectManager.h  AIPlayer.cpp  AIPlayer.h  AIQuadTree.h  AIQuadTree.inl  AIRadialOcclusion.cpp  AIRadialOcclusion.h  AIRecorder.cpp  (+127 more)
Code/CryEngine/CryAction/: AIDebugRenderer.cpp  AIDebugRenderer.h  ActionFilter.cpp  ActionFilter.h  ActionGame.cpp  ActionGame.h  ActionMap.cpp  ActionMap.h  ActionMapManager.cpp  ActionMapManager.h  ActorSystem.cpp  ActorSystem.h  Analyst.cpp  Analyst.h  BreakableGlassSystem.cpp  BreakableGlassSystem.h  CallbackTimer.cpp  CallbackTimer.h  ColorGradientManager.cpp  ColorGradientManager_Test.cpp  CompositeData.h  CryAction.cpp  CryAction.h  CryActionCVars.cpp  CryActionCVars.h  CryActionPhysicQueues.h  CryAction_RMI.cpp  DelayedPlaneBreak.cpp  DelayedPlaneBreak.h  DevMode.cpp  DevMode.h  EntityTags.cpp  EquipmentManager.cpp  EquipmentManager.h  GameRulesSystem.cpp  GameRulesSystem.h  GameXmlParamReader.h  IActionMapManager.h  IActorSystem.h  IAnimatedCharacter.h  (+65 more)
Code/CryEngine/CryScaleform/Impl/: CMakeLists.txt  FlashPlayerInstance.cpp  FlashPlayerInstance.h  GAllocatorCryMem.cpp  GAllocatorCryMem.h  GFileCryPak.cpp  GFileCryPak.h  GFxVideoSoundCrySound.cpp  GFxVideoSoundCrySound.h  GFxVideoWrapper.cpp  GFxVideoWrapper.h  GImeHelper.cpp  GImeHelper.h  Module.cpp  Module.h  ScaleformHelper.h  ScaleformSelector.cpp  ScaleformSelector.h  ScaleformTypes.h  SharedResources.cpp  SharedResources.h  SharedStates.cpp  SharedStates.h  StdAfx.cpp  StdAfx.h
Code/CryEngine/CryScaleform/Impl/Renderer/: SFConfig.h  SFMesh.cpp  SFMesh.h  SFRenderCache.cpp  SFRenderCache.h  SFRenderer.cpp  SFRenderer.h  SFShaderDescs.cpp  SFShaderDescs.h  SFTechnique.cpp  SFTechnique.h  SFTexture.cpp  SFTexture.h
Code/CryPlugins/: CMakeLists.txt
Code/CryPlugins/CryGamePlatform/: CMakeLists.txt
Code/CryPlugins/CryGamePlatform/Common/: PlatformLocalPlayer.cpp  PlatformLocalPlayer.h
Code/CryPlugins/CryGamePlatform/Interface/: IGamePlatform.h  IPlatformAccount.h  IPlatformAccountManager.h  IPlatformAchievement.h  IPlatformBase.h  IPlatformLeaderboards.h  IPlatformLobby.h  IPlatformMatchmaking.h  IPlatformNetworking.h  IPlatformRemoteStorage.h  IPlatformServer.h  IPlatformService.h  IPlatformStatistics.h  IPlatformStreamInstall.h  IPlatformUser.h  IPlatformUserGeneratedContent.h  PlatformIdentifier.h  PlatformTypes.h  PlatformUserIdentifier.h
Code/CryPlugins/CryGamePlatform/Module/Core/: CMakeLists.txt  CryGamePlatform.natvis  GamePlatform.cpp  GamePlatform.h  PlatformAccountManager.h  PlatformAccountManager.inl  StdAfx.h  User.cpp  User.h  crygameplatform.waf_files
Code/CryPlugins/CryGamePlatform/Module/Discord/: CMakeLists.txt  DiscordAccount.cpp  DiscordAccount.h  DiscordHelper.cpp  DiscordHelper.h  DiscordService.cpp  DiscordService.h  DiscordTypes.h  DiscordUserIdentifier.h  StdAfx.h  resource.h
Code/CryPlugins/CryGamePlatform/Module/Steam/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  SteamAccount.cpp  SteamAccount.h  SteamAchievement.cpp  SteamAchievement.h  SteamLeaderboards.cpp  SteamLeaderboards.h  SteamMatchmaking.cpp  SteamMatchmaking.h  SteamNetworking.cpp  SteamNetworking.h  SteamRemoteFile.cpp  SteamRemoteFile.h  SteamRemoteStorage.cpp  SteamRemoteStorage.h  SteamServer.cpp  SteamServer.h  SteamService.cpp  SteamService.h  SteamSharedRemoteFile.cpp  SteamSharedRemoteFile.h  SteamStatistics.cpp  SteamStatistics.h  SteamTypes.h  SteamUserIdentifier.h  SteamUserLobby.cpp  SteamUserLobby.h  UserGeneratedContent.cpp  UserGeneratedContent.h  UserGeneratedContentManager.cpp  UserGeneratedContentManager.h
Code/CryPlugins/CryHTTP/Module/: CMakeLists.txt  HttpImplementation_cURL.cpp  HttpImplementation_cURL.h  HttpRequestImpl_cURL.cpp  HttpRequestImpl_cURL.h  StdAfx.h  resource.h
Code/Libs/discord-game-sdk/: CMakeLists.txt
Editor/Scripts/: environmentmodes.py  example.py  generatelod.py  rename_cgf.py  select_story_anim_objects.py  tools_shelf_actions.py  viewmodes.py
Editor/UI/: releaseTranslations.py  removeTranslationFiles.py  updateTranslatableText.py
Tools/CMake/: Build.cmake  BuildEngine.cmake  BuildSandbox.cmake  CRYENGINE-CLANG.cmake  CRYENGINE-GCC.cmake  CommonMacros.cmake  CommonOptions.cmake  Configure.cmake  CopyFilesToBin.cmake  DownloadSDKs.cmake  InitialSetup.cmake
Tools/CryVersionSelector/: cryrun.py  cryrun_gui.py
Tools/thirdparty_licenses/: Mono.txt  TangentBasisComputation.txt  discord-game-sdk.txt  functor.txt  libvorbisidec.txt  mtrand.txt  opus.txt  opusfile.txt  osvr.txt  pdcurses.txt  portaudio.txt  squash.txt  swig.txt  vulkan.txt  winpixeventruntime.txt  xnormal.txt  zlib.txt
_WAF_/msbuild/: waf_property_sheet.xml
(+10285 files in other folders)
